--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ before_install:
     - echo $TRAVIS_TAG
 
     - sudo apt-get -qq update
-    - sudo apt-get install -y cython python-numpy python-scipy
+    - sudo apt-get install -y cython
+    - sudo apt-get install -y python-numpy
+    - sudo apt-get install -y python-scipy
 
 install:
     - echo "install..."
