--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,15 @@ before_install:
     - echo $TRAVIS_TAG
 
     - sudo apt-get -qq update
-    - sudo apt-get install -y cython
+    # - sudo apt-get install -y cython
     - sudo apt-get install -y python-numpy
     - sudo apt-get install -y python-scipy
 
 install:
     - echo "install..."
+    - pip install cython
+    - pip install -r requirements.txt
+    - python setup.py install
 
 script:
     - make test
