--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ before_install:
 install:
     - echo "install..."
     - pip install cython
-    - pip install -r requirements.txt
-    - python setup.py install
+    # - pip install -q numpy cython
 
 script:
     - make test
