--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
     - master
     - dev
 
+
+
 before_install:
     - echo "before_install..."
     - git submodule update --init --recursive
@@ -29,12 +31,20 @@ before_install:
     - sudo apt-get install -y python-numpy
     - sudo apt-get install -y python-scipy
 
+    - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - conda update --yes conda
+    - conda info -a
+    # - conda config --add channels conda-forge
+
 install:
     - echo "install..."
     - pip install cython
     # - pip install -q numpy cython
-    - pip install numpy
-    - pip install scipy
+    # - pip install numpy
+    # - pip install scipy
+    - conda install cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 libgpuarray=0.6.2 pygpu=0.6.2 mako=1.0.6 theano=0.9.0
 
 script:
     - make test
