--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.theano
-    - $HOME/download # Sufficient to add miniconda.sh to TRAVIS cache.
     - $HOME/miniconda
 
 
@@ -41,8 +40,8 @@ before_install:
 
     - if test ! -e $HOME/miniconda/bin; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+        bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
       fi
-    - bash $HOME/download/miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
     - conda info -a
