--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ before_install:
     # - sudo apt-get install -y python-scipy
 
     - if test ! -e $HOME/miniconda/bin; then
+        mkdir -p $HOME/download;
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
         bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
       fi
