--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ branches:
     - dev
 
 
-addons:
-  apt:
-    packages:
-      - nvidia-cuda-toolkit
-      - nvidia-cuda-dev
-      - nvidia-profiler
+# addons:
+#   apt:
+#     packages:
+#       - nvidia-cuda-toolkit
+#       - nvidia-cuda-dev
+#       - nvidia-profiler
 
 before_install:
     - echo "before_install..."
@@ -60,7 +60,8 @@ install:
     # - pip install -q numpy cython
     # - pip install numpy
     # - pip install scipy
-    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 libgpuarray=0.6.2 pygpu=0.6.2 mako=1.0.6 theano=0.9.0
+    # - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 libgpuarray=0.6.2 pygpu=0.6.2 mako=1.0.6 theano=0.9.0
+    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0
     - conda info -a
 
 script:
