--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-# cache:
-#   directories:
-#     - $HOME/.cache/pip
-#     - $HOME/.theano
-#     - $HOME/miniconda
+cache:
+  directories:
+    - $HOME/.cache/pip
+    - $HOME/.theano
+    - $HOME/miniconda
 
 
 language: python
@@ -17,14 +17,6 @@ branches:
     - master
     - dev
 
-
-# addons:
-#   apt:
-#     packages:
-#       - nvidia-cuda-toolkit
-#       - nvidia-cuda-dev
-#       - nvidia-profiler
-
 before_install:
     - echo "before_install..."
     - git submodule update --init --recursive
@@ -38,11 +30,10 @@ before_install:
     - echo $TRAVIS_TAG
     - export TRAVIS_TAG=`git describe --tags --exact-match HEAD 2>/dev/null`
     - echo $TRAVIS_TAG
+    - echo "TRAVIS=$TRAVIS"
+    - echo "CI=$CI"
 
     - sudo apt-get -qq update
-    # - sudo apt-get install -y cython
-    # - sudo apt-get install -y python-numpy
-    # - sudo apt-get install -y python-scipy
 
     - if test ! -e $HOME/miniconda/bin; then
         mkdir -p $HOME/download;
@@ -56,12 +47,7 @@ before_install:
 
 install:
     - echo "install..."
-    # - pip install cython
-    # - pip install -q numpy cython
-    # - pip install numpy
-    # - pip install scipy
-    # - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 libgpuarray=0.6.2 pygpu=0.6.2 mako=1.0.6 theano=0.9.0
-    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0
+    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Need mako ?
     - conda info -a
 
 script:
