--- a/.travis.yml
+++ b/.travis.yml
@@ -38,12 +38,11 @@ before_install:
     - if test ! -e $HOME/miniconda/bin; then
         mkdir -p $HOME/download;
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-        bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
+        bash $HOME/download/miniconda.sh -u -b -p $HOME/miniconda;
       fi
     - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
     - conda info -a
-    # - conda config --add channels conda-forge
 
 install:
     - echo "install..."
