--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_install:
 install:
     - echo "install..."
     - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Need mako ?
-    - conda install --yes matplotlib=2.0.2
+    - conda install --yes matplotlib=2.0.2 # Has to be done separately or it conda crashes
     - conda info -a
 
 script:
