--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ install:
 
 script:
     - make
+    - tar xvf test/slttest.tar.gz -C test/
     - coverage run --source=. test/test_base.py
     - coverage run --source=. test/test_smoke.py
     - bash setenv_travis.sh test/test_smoke_theano.py
