--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ script:
     - tar xvf test/slttest.tar.gz -C test/
     - coverage run --source=. test/test_base.py
     - coverage run --source=. test/test_smoke.py
-    - bash setenv_travis.sh test/test_smoke_theano.py
+    - bash setenv_travis.sh coverage run --source=. test/test_smoke_theano.py
 
 after_success:
     - coveralls
