--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_install:
 install:
     - echo "install..."
     - pip install coveralls
+    - pip install codecov
     - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Really need mako ?
     - conda install --yes matplotlib=2.0.2 # Has to be done separately otherwise conda crashes
     - conda info -a
@@ -61,4 +62,5 @@ script:
     - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_run.py
 
 after_success:
+    - codecov
     - coveralls
