--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,10 @@ before_install:
     - conda update --yes conda
     - conda info -a
 
+    - which ps
+    - which git
+    # - which nvidia-smi
+
 install:
     - echo "install..."
     - pip install codecov
