--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_install:
 install:
     - echo "install..."
     - pip install codecov
+    - pip install codacy-coverage
     - pip install defusedxml
     - pip install bandmat
     - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Really need mako ?
@@ -64,3 +65,6 @@ script:
 
 after_success:
     - codecov
+    - coverage xml
+    - export CODACY_PROJECT_TOKEN=4bb1b6ba55634fc1a149c93c939b2242
+    - python-codacy-coverage -r coverage.xml
