--- a/.travis.yml
+++ b/.travis.yml
@@ -59,9 +59,9 @@ script:
     - make
     - tar xvf test/slttest.tar.gz -C test/
     - coverage run --source=. --omit="test/*","external/*" test/test_base.py
-    - coverage run -a --source=. --omit="test/*","external/*" test/test_smoke.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_smoke_theano.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_run.py
+    # - coverage run -a --source=. --omit="test/*","external/*" test/test_smoke.py
+    # - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_smoke_theano.py
+    # - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_run.py
 
 after_success:
     - codecov
