--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/Lasagne/Lasagne.git
 [submodule "external/pfs"]
 	path = external/pfs
-	url = git@github.com:gillesdegottex/pfs.git
+	url = https://github.com/gillesdegottex/pfs.git
