--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "external/pulsemodel"]
-	path = external/pulsemodel
+	path = percival-tts/external/pulsemodel
 	url = https://github.com/gillesdegottex/pulsemodel.git
 [submodule "external/Lasagne"]
-	path = external/Lasagne
+	path = percival-tts/external/Lasagne
 	url = https://github.com/Lasagne/Lasagne.git
 [submodule "external/pfs"]
-	path = external/pfs
+	path = percival-tts/external/pfs
 	url = https://github.com/gillesdegottex/pfs.git
