--- a/.travis.yml
+++ b/.travis.yml
@@ -57,11 +57,11 @@ install:
 
 script:
     - make
-    - tar xvf test/slt_arctic_merlin_test.tar.gz -C test/
-    - coverage run --source=. --omit="test/*","external/*" test/test_base.py
-    - coverage run -a --source=. --omit="test/*","external/*" test/test_smoke.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_smoke_theano.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="test/*","external/*" test/test_run.py
+    - tar xvf tests/slt_arctic_merlin_test.tar.gz -C tests/
+    - coverage run --source=. --omit="tests/*","external/*" tests/test_base.py
+    - coverage run -a --source=. --omit="tests/*","external/*" tests/test_smoke.py
+    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" tests/test_smoke_theano.py
+    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" tests/test_run.py
 
 after_success:
     - codecov
