--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ install:
     - conda info -a
 
 script:
+    - cd percival-tts
     - make
     - tar xvf tests/slt_arctic_merlin_test.tar.gz -C tests/
     - coverage run --source=. --omit="tests/*","external/*" tests/test_base.py
