--- a/percival-tts/Makefile
+++ b/percival-tts/Makefile
@@ -19,7 +19,7 @@ FILETORUN=run.py
 SETENVSCRIPT=setenv.sh
 QSUBCMD="qsub -l gpu=1 -j y -cwd -S /bin/bash"
 
-CODEDIR=percival
+CODEDIR=percival-tts
 
 # Maintenance targets ----------------------------------------------------------
 
