--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,10 @@ script:
     - cd percivaltts
     - make run
     - tar xvf tests/slt_arctic_merlin_test.tar.gz -C tests/
-    - coverage run --source=. --omit="tests/*","external/*" tests/test_base.py
-    - coverage run -a --source=. --omit="tests/*","external/*" tests/test_smoke.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" tests/test_smoke_theano.py
-    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" tests/test_run.py
+    - coverage run --source=. --omit="tests/*","external/*" -m tests.test_base
+    - coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke
+    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke_theano
+    - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_run
 
 after_success:
     - codecov
