add pulsemodel back

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "percivaltts/external/pfs"]
 	path = percivaltts/external/pfs
 	url = https://github.com/gillesdegottex/pfs.git
+[submodule "percivaltts/external/pulsemodel"]
+	path = percivaltts/external/pulsemodel
+	url = git@github.com:gillesdegottex/pulsemodel.git
