--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/gillesdegottex/pfs.git
 [submodule "percivaltts/external/pulsemodel"]
 	path = percivaltts/external/pulsemodel
-	url = git@github.com:gillesdegottex/pulsemodel.git
+	url = https://github.com:gillesdegottex/pulsemodel.git
