--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/Lasagne/Lasagne.git
 [submodule "percivaltts/external/pfs"]
 	path = percivaltts/external/pfs
-	url = https://github.com/gillesdegottex/pfs.git
+	url = https://gitlab.com/gillesdegottex/pfs.git
 [submodule "percivaltts/external/pulsemodel"]
 	path = percivaltts/external/pulsemodel
 	url = https://github.com/gillesdegottex/pulsemodel.git
