--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,14 +32,15 @@ before_script:
     - conda install --yes pip
     - conda info -a
 
+    - echo "Install conda packages..."
+    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Really need mako ?
+    - conda install --yes matplotlib=2.0.2 # Has to be done separately otherwise conda crashes
+
     - echo "Install pip packages..."
     - pip install codecov
     - pip install codacy-coverage
     - pip install defusedxml
     - pip install bandmat
-    - conda install --yes cython=0.26.1 libffi=3.2.1 libgcc-ng=7.2.0 libstdcxx-ng=7.2.0 numpy=1.12.1 scipy=0.19.1 mako=1.0.6 theano=0.9.0 # TODO Really need mako ?
-    - conda install --yes matplotlib=2.0.2 # Has to be done separately otherwise conda crashes
-    - conda info -a
 
 test:
   stage: test
