--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ variables:
 image: ubuntu:18.04
 
 stages:
-  - test
-
+    - test
+    - after_success
 
 before_script:
     - echo "Install apt packages..."
@@ -55,3 +55,12 @@ test:
     - coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke
     - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke_theano
     - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_run
+
+after_success:
+    stage: after_success
+    when: on_success
+    script:
+        - codecov
+        - coverage xml
+        - export CODACY_PROJECT_TOKEN=4bb1b6ba55634fc1a149c93c939b2242
+        - python-codacy-coverage -r coverage.xml
