--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,8 @@ test:
     - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke_theano
     - bash setenv_travis.sh coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_run
 
-    - codecov
-    - coverage xml
-    - export CODACY_PROJECT_TOKEN=4bb1b6ba55634fc1a149c93c939b2242
-    - python-codacy-coverage -r coverage.xml
+    # - codecov
+
+    # - coverage xml
+    # - export CODACY_PROJECT_TOKEN=4bb1b6ba55634fc1a149c93c939b2242
+    # - python-codacy-coverage -r coverage.xml
