--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ test:
     - ls -l
 
     - make
-    - cd percivaltts
+    # - cd percivaltts
     - tar xvf tests/slt_arctic_merlin_test.tar.gz -C tests/
     - coverage run --source=. --omit="tests/*","external/*" -m tests.test_base
     - coverage run -a --source=. --omit="tests/*","external/*" -m tests.test_smoke
